<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/app_TitleName"
        android:textColor="@color/colorAccent"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAppBegin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAppBegin"
        android:layout_width="148dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundedbutton"
        android:enabled="false"
        android:onClick="onClickButtonBegin"
        android:text="@string/textBegin"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxTerms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxTerms"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginBottom="100dp"
        android:buttonTint="@color/colorAccent"
        android:onClick="onClickTerms"
        android:text="@string/acceptTerms"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>